--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -30,7 +30,7 @@ header {
   width: 95vw;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
   padding-top: 2rem;
   margin-bottom: 7rem;
   color: $white-text;
@@ -119,6 +119,7 @@ input[type="checkbox"] {
 
 .hamburger {
   position: relative;
+  top: -7px;
   cursor: pointer;
   justify-content: center;
   display: none;
@@ -192,7 +193,7 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
     margin-top: 5rem;
     margin-left: 2.5rem;
     background-color: white;
-    color: black;
+    color: white;
     border-radius: 5px;
   }
   @include desktop {
@@ -205,9 +206,19 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
     list-style: none;
     cursor: pointer;
     @include mobile {
-      margin-top: 1rem;
+      margin-top: 0.7rem;
       color: $darkblue-headingtext;
     }
+  }
+}
+.desktop__nav {
+  display: flex;
+  margin-right: 5px;
+  @include mobile {
+    flex-direction: column;
+  }
+  @include desktop {
+    flex-direction: row;
   }
 }
 
@@ -230,7 +241,6 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
 }
 
 .divider {
-  display: none;
   @include mobile {
     width: 60vw;
     margin: 2rem auto;
@@ -239,10 +249,10 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
 
 a {
   text-decoration: none;
-  color: $darkblue-headingtext;
+  color: white;
   text-align: center;
-  @include desktop {
-    color: white;
+  @include mobile {
+    color: $darkblue-headingtext;
   }
 }
 
@@ -308,21 +318,29 @@ a {
 }
 
 .sub-menu.open {
+  @include mobile {
+    display: flex;
+    flex-direction: column;
+    background-color: $footer-text;
+    width: 60vw;
+    margin: 0 auto;
+    color: $darkblue-headingtext;
+    border-radius: 5px;
+    position: relative;
+    left: 5px;
+    text-align: center;
+  }
+
+  position: absolute;
+  width: 10vw;
+  background-color: white;
+  color: black;
+  text-align: left;
   display: flex;
   flex-direction: column;
-  background-color: $footer-text;
-  width: 60vw;
-  margin: 1rem auto;
-  padding: 0.7rem;
-  color: $darkblue-headingtext;
+  margin: 0 auto;
+
   border-radius: 5px;
-  @include desktop {
-    width: 8vw;
-    background-color: white;
-    color: black;
-    text-align: left;
-    position: absolute;
-  }
 }
 
 //  Designed for the future
