--- a/styles/styles.css
+++ b/styles/styles.css
@@ -336,8 +336,13 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
   font-family: "Overpass SemiBold";
 }
 
+.divider {
+  visibility: hidden;
+}
+
 @media (max-width: 375px) {
   .divider {
+    visibility: visible;
     width: 60vw;
     margin: 2rem auto;
   }
@@ -447,6 +452,7 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   margin: 0 auto;
+  padding-left: 0.3rem;
   border-radius: 5px;
 }
 
