Responsive looking good

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -17,9 +17,9 @@ header {
 .test {
   height: 600px;
   background-image: url("../images/bg-pattern-intro.svg");
-  background-position: bottom;
+  background-position: 33% 33%;
   background-repeat: no-repeat;
-  background-size: 700px;
+  background-size: 1205px;
   @include desktop {
     background-position: 25% 52%;
     background-size: 3233px;
@@ -170,7 +170,7 @@ input[type="checkbox"]:checked ~ .hamburger .bottom {
 }
 
 input[type="checkbox"]:checked ~ .hamburger .middle {
-  transform: translateX(20px);
+  transform: translateX(-20px);
   opacity: 0;
 }
 // Nav Links
@@ -388,19 +388,22 @@ a {
     margin-bottom: 2rem;
   }
   &--title {
-    margin-bottom: 1rem;
+    width: 53vw;
     line-height: 2rem;
     letter-spacing: 1px;
     font-family: $overpass-semibold-font;
     color: $darkblue-headingtext;
     margin: 0 auto;
+    @include desktop {
+      width: 100%;
+    }
   }
   &--description {
     font-family: "Overpass", sans-serif;
     color: $darkgray-blue-bodytext;
     padding-top: 20px;
     line-height: 1.5rem;
-    width: 75vw;
+    width: 80vw;
     margin: 0 auto;
 
     @include desktop {
@@ -436,18 +439,18 @@ a {
 
 .test2 {
   background-image: url("../images/bg-pattern-circles.svg");
-  background-position: bottom;
+  background-position: 50% 160%;
   background-repeat: no-repeat;
-  background-size: 600px;
+  background-size: 610px;
   @include desktop {
     background-position: -47% 66%;
     background-size: 990px;
   }
 }
 .state__container {
-  height: 625px;
+  overflow: hidden;
+  height: 450px;
   margin-bottom: 2rem;
-
   background: linear-gradient(
     to bottom,
     $verydark-gray-blue,
@@ -455,6 +458,9 @@ a {
   );
   border-top-right-radius: 120px;
   border-bottom-left-radius: 120px;
+  @include mobile {
+    height: 625px;
+  }
   @include desktop {
     height: 400px;
   }
@@ -479,7 +485,7 @@ a {
     }
   }
   &--description {
-    width: 71vw;
+    width: 78vw;
     margin: 0 auto;
     line-height: 1.7rem;
     font-family: "Overpass", sans-serif;
