--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,9 +40,9 @@ header {
 .test {
   height: 600px;
   background-image: url("../images/bg-pattern-intro.svg");
-  background-position: bottom;
+  background-position: 33% 33%;
   background-repeat: no-repeat;
-  background-size: 700px;
+  background-size: 1205px;
 }
 
 @media (min-width: 1440px) {
@@ -226,8 +226,8 @@ input[type="checkbox"]:checked ~ .hamburger .bottom {
 }
 
 input[type="checkbox"]:checked ~ .hamburger .middle {
-  -webkit-transform: translateX(20px);
-          transform: translateX(20px);
+  -webkit-transform: translateX(-20px);
+          transform: translateX(-20px);
   opacity: 0;
 }
 
@@ -539,7 +539,7 @@ a {
 }
 
 .future__container--title {
-  margin-bottom: 1rem;
+  width: 53vw;
   line-height: 2rem;
   letter-spacing: 1px;
   font-family: "Overpass SemiBold";
@@ -547,12 +547,18 @@ a {
   margin: 0 auto;
 }
 
+@media (min-width: 1440px) {
+  .future__container--title {
+    width: 100%;
+  }
+}
+
 .future__container--description {
   font-family: "Overpass", sans-serif;
   color: #4b5862;
   padding-top: 20px;
   line-height: 1.5rem;
-  width: 75vw;
+  width: 80vw;
   margin: 0 auto;
 }
 
@@ -595,9 +601,9 @@ a {
 
 .test2 {
   background-image: url("../images/bg-pattern-circles.svg");
-  background-position: bottom;
+  background-position: 50% 160%;
   background-repeat: no-repeat;
-  background-size: 600px;
+  background-size: 610px;
 }
 
 @media (min-width: 1440px) {
@@ -608,12 +614,19 @@ a {
 }
 
 .state__container {
-  height: 625px;
+  overflow: hidden;
+  height: 450px;
   margin-bottom: 2rem;
   background: -webkit-gradient(linear, left top, left bottom, from(#2c2d3f), to(#3f4164));
   background: linear-gradient(to bottom, #2c2d3f, #3f4164);
   border-top-right-radius: 120px;
   border-bottom-left-radius: 120px;
+}
+
+@media (max-width: 375px) {
+  .state__container {
+    height: 625px;
+  }
 }
 
 @media (min-width: 1440px) {
@@ -650,7 +663,7 @@ a {
 }
 
 .state__container--description {
-  width: 71vw;
+  width: 78vw;
   margin: 0 auto;
   line-height: 1.7rem;
   font-family: "Overpass", sans-serif;
