--- a/styles/styles.css
+++ b/styles/styles.css
@@ -828,4 +828,22 @@ footer {
     border-bottom: 2px solid white;
   }
 }
+
+@media (max-width: 800px) {
+  .desktop {
+    display: none;
+  }
+  .mobile {
+    display: block;
+  }
+}
+
+@media (min-width: 801px) {
+  .mobile {
+    display: none;
+  }
+  .desktop {
+    display: block;
+  }
+}
 /*# sourceMappingURL=styles.css.map */
