--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -602,7 +602,7 @@ footer {
   }
 
   .mobile {
-    display: block;
+    display: inline-block;
   }
 }
 
@@ -612,6 +612,6 @@ footer {
   }
 
   .desktop {
-    display: block;
+    display: inline-block;
   }
 }
