--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,21 +34,21 @@
 header {
   background: -webkit-gradient(linear, left top, left bottom, from(#ff8f70), to(#ff3d54));
   background: linear-gradient(to bottom, #ff8f70, #ff3d54);
-  border-bottom-left-radius: 120px;
+  border-bottom-left-radius: 7.5rem;
 }
 
 .test {
-  height: 600px;
+  height: 37.5rem;
   background-image: url("../images/bg-pattern-intro.svg");
   background-position: 33% 33%;
   background-repeat: no-repeat;
-  background-size: 1205px;
+  background-size: 75.31rem;
 }
 
 @media (min-width: 1440px) {
   .test {
     background-position: 25% 52%;
-    background-size: 3233px;
+    background-size: 202rem;
   }
 }
 
@@ -60,9 +60,9 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-top: 2rem;
   margin-bottom: 7rem;
   color: white;
@@ -109,15 +109,20 @@ header {
   }
 }
 
+.menu-arrow:hover {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
 .landing__button {
   text-align: center;
 }
 
 .landing__button--start {
   font-family: "Overpass SemiBold";
-  width: 100px;
-  height: 40px;
-  border-radius: 33px;
+  width: 6.25rem;
+  height: 2.5rem;
+  border-radius: 2rem;
   background-color: white;
   border: none;
   color: #ff525d;
@@ -137,9 +142,9 @@ header {
 
 .landing__button--learn {
   font-family: "Overpass SemiBold";
-  width: 100px;
-  height: 40px;
-  border-radius: 33px;
+  width: 6.25rem;
+  height: 2.5rem;
+  border-radius: 2rem;
   border: 1px solid white;
   background-color: transparent;
   text-decoration: none;
@@ -177,9 +182,9 @@ input[type="checkbox"] {
 
 .middle {
   height: 3px;
-  width: 30px;
+  width: 1.875rem;
   background-color: white;
-  border-radius: 50px;
+  border-radius: 3.125rem;
   position: absolute;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
@@ -188,9 +193,9 @@ input[type="checkbox"] {
 .top {
   bottom: 5px;
   height: 3px;
-  width: 30px;
+  width: 1.875rem;
   background-color: white;
-  border-radius: 50px;
+  border-radius: 3.125rem;
   position: absolute;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
@@ -199,9 +204,9 @@ input[type="checkbox"] {
 .bottom {
   top: 10px;
   height: 3px;
-  width: 30px;
+  width: 1.875rem;
   background-color: white;
-  border-radius: 50px;
+  border-radius: 3.125rem;
   position: absolute;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
@@ -210,7 +215,7 @@ input[type="checkbox"] {
 input[type="checkbox"]:checked ~ .hamburger .top {
   -webkit-transform: rotate(-50deg);
           transform: rotate(-50deg);
-  width: 25px;
+  width: 1.56rem;
   -webkit-transform-origin: right;
           transform-origin: right;
   top: -10px;
@@ -219,7 +224,7 @@ input[type="checkbox"]:checked ~ .hamburger .top {
 input[type="checkbox"]:checked ~ .hamburger .bottom {
   -webkit-transform: rotate(50deg);
           transform: rotate(50deg);
-  width: 25px;
+  width: 1.56rem;
   -webkit-transform-origin: right;
           transform-origin: right;
   top: 10px;
@@ -235,7 +240,7 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 40vw;
+  width: 50vw;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -355,20 +360,6 @@ a {
   }
 }
 
-.menu-arrow-down {
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
-  -webkit-transition: 0.3s linear;
-  transition: 0.3s linear;
-}
-
-.menu-arrow-down.open {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-  -webkit-transition: 0.3s linear;
-  transition: 0.3s linear;
-}
-
 @media (max-width: 375px) {
   .login__container {
     display: -webkit-box;
@@ -406,7 +397,7 @@ a {
   cursor: pointer;
   width: 8vw;
   height: 4.2vh;
-  border-radius: 20px;
+  border-radius: 1.25rem;
   background-color: white;
   color: #ff525d;
 }
@@ -415,7 +406,7 @@ a {
   .signup-btn {
     width: 30vw;
     height: 6vh;
-    border-radius: 40px;
+    border-radius: 2.5rem;
     background-color: #ff525d;
     color: white;
     margin: 0 auto;
@@ -507,7 +498,7 @@ a {
 }
 
 .future__container--img {
-  width: 375px;
+  width: 23.43rem;
 }
 
 @media (max-width: 375px) {
@@ -563,7 +554,7 @@ a {
 .future__container--description {
   font-family: "Overpass", sans-serif;
   color: #4b5862;
-  padding-top: 20px;
+  padding-top: 1.25rem;
   line-height: 1.5rem;
   width: 80vw;
   margin: 0 auto;
@@ -591,18 +582,18 @@ a {
 }
 
 .blogr__phonebox--img {
-  width: 328px;
-  height: 347px;
+  width: 20.5rem;
+  height: 21.68rem;
   position: relative;
-  top: 185px;
+  top: 11.56rem;
 }
 
 @media (min-width: 1440px) {
   .blogr__phonebox--img {
-    width: 472px;
-    height: 499px;
-    top: 410px;
-    left: 105px;
+    width: 29.5rem;
+    height: 31.18rem;
+    top: 25.62rem;
+    left: 6.56rem;
   }
 }
 
@@ -610,35 +601,35 @@ a {
   background-image: url("../images/bg-pattern-circles.svg");
   background-position: 50% 160%;
   background-repeat: no-repeat;
-  background-size: 610px;
+  background-size: 38.125rem;
 }
 
 @media (min-width: 1440px) {
   .test2 {
     background-position: -47% 66%;
-    background-size: 990px;
+    background-size: 61.875rem;
   }
 }
 
 .state__container {
   overflow: hidden;
-  height: 450px;
+  height: 28.125rem;
   margin-bottom: 2rem;
   background: -webkit-gradient(linear, left top, left bottom, from(#2c2d3f), to(#3f4164));
   background: linear-gradient(to bottom, #2c2d3f, #3f4164);
-  border-top-right-radius: 120px;
-  border-bottom-left-radius: 120px;
+  border-top-right-radius: 7.5rem;
+  border-bottom-left-radius: 7.5rem;
 }
 
 @media (max-width: 375px) {
   .state__container {
-    height: 625px;
+    height: 39rem;
   }
 }
 
 @media (min-width: 1440px) {
   .state__container {
-    height: 400px;
+    height: 16rem;
   }
 }
 
@@ -698,14 +689,14 @@ a {
 }
 
 .free__container--img {
-  width: 375px;
+  width: 23.43rem;
 }
 
 @media (min-width: 1440px) {
   .free__container--img {
     width: 50vw;
     position: relative;
-    right: 202px;
+    right: 12.625rem;
   }
 }
 
@@ -752,7 +743,7 @@ footer {
   text-align: center;
   background-color: #25252d;
   color: white;
-  border-top-right-radius: 80px;
+  border-top-right-radius: 5rem;
 }
 
 @media (min-width: 1440px) {
@@ -778,7 +769,7 @@ footer {
 }
 
 .footer__container {
-  height: 600px;
+  height: 37.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -794,7 +785,7 @@ footer {
 
 @media (min-width: 1440px) {
   .footer__container {
-    height: 300px;
+    height: 18.75rem;
     width: 60vw;
     margin-left: 10rem;
     -webkit-box-orient: horizontal;
