--- a/styles/styles.css
+++ b/styles/styles.css
@@ -331,11 +331,6 @@ input[type="checkbox"]:checked ~ .hamburger .middle {
   border-bottom: 2px solid white;
 }
 
-.sub-menu li:hover {
-  color: #ff7a85;
-  font-family: "Overpass SemiBold";
-}
-
 .divider {
   visibility: hidden;
 }
@@ -461,6 +456,11 @@ a {
     left: 5px;
     text-align: center;
   }
+}
+
+.sub-menu li:hover {
+  color: #ff7a85;
+  font-family: "Overpass SemiBold";
 }
 
 .future__heading {
@@ -818,6 +818,16 @@ footer {
   .footer__container--li:hover {
     border-bottom: 2px solid white;
   }
+}
+
+.attribution {
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+.attribution a {
+  color: #3e52a3;
+  margin-right: 2rem;
 }
 
 @media (max-width: 800px) {
