fixing responsive nav menu

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,8 +117,10 @@ header {
 }
 
 .landing__container--title {
+  margin: 7rem auto;
   margin-bottom: 1rem;
   font-family: "Overpass SemiBold";
+  font-size: 2.2rem;
 }
 
 @media (max-width: 375px) {
@@ -223,7 +225,54 @@ header {
     display: flex;
   }
   .navbar-links {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: white;
+    width: 60%;
+    height: 40vh;
+    margin: 2rem auto;
+    text-align: center;
     display: none;
+  }
+  .navbar-links ul a {
+    color: black;
+    text-align: center;
+  }
+  .navbar {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .navbar-links ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .login__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .navbar-links.active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    margin: 0 auto;
+    top: 85px;
+    left: 80px;
   }
 }
 
@@ -271,26 +320,13 @@ header {
 }
 
 .signup-btn {
-  font-family: "Ubuntu Medium";
-  border: 0px;
-  cursor: pointer;
-  width: 8vw;
-  height: 4.2vh;
-  border-radius: 1.25rem;
-  background-color: white;
-  color: #ff525d;
-}
-
-@media (max-width: 375px) {
-  .signup-btn {
-    width: 30vw;
-    height: 6vh;
-    border-radius: 2.5rem;
-    background-color: #ff525d;
-    color: white;
-    margin: 0 auto;
-    outline: none;
-  }
+  width: 100px;
+  height: 6vh;
+  border-radius: 2.5rem;
+  background-color: #ff525d;
+  color: white;
+  margin: 0 auto;
+  outline: none;
 }
 
 @media (min-width: 1440px) {
