--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,7 +231,7 @@ header {
             flex-direction: column;
     background-color: white;
     width: 60%;
-    height: 40vh;
+    height: 80vh;
     margin: 2rem auto;
     text-align: center;
     display: none;
@@ -248,6 +248,18 @@ header {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+  }
+  .navbar li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .navbar-links ul {
     -webkit-box-orient: vertical;
@@ -272,7 +284,41 @@ header {
     position: absolute;
     margin: 0 auto;
     top: 85px;
-    left: 80px;
+    left: 20%;
+  }
+  .sub-menu.open {
+    display: block;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background-color: #c8c8cb;
+    width: 50%;
+    color: #1f3f5b;
+    border-radius: 5px;
+    text-align: center;
+    position: absolute;
+    top: 35px;
+    left: 25%;
+    z-index: 1;
+    margin: 0 auto;
+  }
+  .parent {
+    position: relative;
+  }
+}
+
+@media (min-width: 769px) {
+  .mobile-arrow {
+    display: none;
+  }
+  .navbar li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -323,6 +369,7 @@ header {
   width: 100px;
   height: 6vh;
   border-radius: 2.5rem;
+  border: 0px;
   background-color: #ff525d;
   color: white;
   margin: 0 auto;
@@ -336,46 +383,8 @@ header {
   }
 }
 
-.sub-menu {
+ul .sub-menu {
   display: none;
-}
-
-.sub-menu.open {
-  position: absolute;
-  width: 10vw;
-  background-color: white;
-  color: black;
-  text-align: left;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin: 6px auto;
-  padding-left: 0.3rem;
-  border-radius: 5px;
-}
-
-@media (max-width: 375px) {
-  .sub-menu.open {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    background-color: #c8c8cb;
-    width: 60vw;
-    margin: 0 auto;
-    color: #1f3f5b;
-    border-radius: 5px;
-    position: relative;
-    left: 5px;
-    text-align: center;
-  }
 }
 
 .sub-menu li:hover {
