--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -163,11 +163,17 @@ header {
     display: flex;
   }
 
+  .mobile-arrow {
+    position: relative;
+    left: 50px;
+    bottom: 28px;
+  }
+
   .navbar-links {
     flex-direction: column;
     background-color: white;
-    width: 60%;
-    height: 80vh;
+    width: 80%;
+    height: 551px;
     margin: 2rem auto;
     text-align: center;
     display: none;
@@ -184,6 +190,7 @@ header {
   }
   .navbar li {
     display: flex;
+    flex-direction: column;
     align-items: center;
     width: 100%;
     justify-content: center;
@@ -203,24 +210,25 @@ header {
     position: absolute;
     margin: 0 auto;
     top: 85px;
-    left: 20%;
+    left: 10%;
   }
+
   .sub-menu.open {
     display: block;
-    flex-direction: column;
     background-color: $footer-text;
-    width: 50%;
+    width: 70%;
     color: $darkblue-headingtext;
     border-radius: 5px;
     text-align: center;
-    position: absolute;
-    top: 35px;
-    left: 25%;
-    z-index: 1;
     margin: 0 auto;
-  }
-  .parent {
     position: relative;
+    bottom: 10%;
+    left: 2%;
+    padding: 1rem;
+  }
+
+  .sub-menu.open li {
+    margin-bottom: 0.7rem;
   }
 }
 
@@ -299,44 +307,6 @@ header {
 //   opacity: 0;
 // }
 // Nav Links
-
-// .nav__links {
-//   display: flex;
-//   width: 50vw;
-//   justify-content: space-between;
-//   align-items: center;
-//   @include mobile {
-//     position: absolute;
-//     top: 50px;
-//     width: 80vw;
-//     height: 80vh;
-//     transition: 0.5s;
-//     display: block;
-//     text-align: center;
-//     margin-top: 5rem;
-//     margin-left: 2.5rem;
-//     background-color: white;
-//     color: white;
-//     border-radius: 5px;
-//   }
-//   @include desktop {
-//     width: 70vw;
-//   }
-// }
-
-// .parent {
-//   @include mobile {
-//     margin-bottom: 2rem;
-//   }
-//   @include desktop {
-//     display: inline-block;
-//     margin-right: 2rem;
-//   }
-// }
-
-// .parent a:hover {
-//   border-bottom: 2px solid white;
-// }
 
 .divider {
   @include mobile {
