--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -31,6 +31,10 @@ header {
   }
 }
 
+.navbar-item {
+  font-family: $overpass-semibold-font;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -58,11 +62,13 @@ header {
   text-decoration: none;
   color: white;
   display: block;
-  padding: 1rem;
+  margin-right: 0.5rem;
+  padding: 0.8rem;
 }
 
 .navbar li a:hover {
   border-bottom: 2px solid white;
+  padding: 0;
   cursor: pointer;
 }
 
@@ -159,8 +165,17 @@ header {
 }
 
 @media (max-width: 768px) {
+  .divider {
+    visibility: visible;
+    width: 30vw;
+    margin: 2rem auto;
+  }
+  .navbar {
+    padding-top: 1rem;
+  }
   .toggle-button {
     display: flex;
+    margin-top: 1.3rem;
   }
 
   .mobile-arrow {
@@ -173,7 +188,7 @@ header {
     flex-direction: column;
     background-color: white;
     width: 80%;
-    height: 551px;
+    height: auto;
     margin: 2rem auto;
     text-align: center;
     display: none;
@@ -203,6 +218,7 @@ header {
     display: flex;
     flex-direction: column;
     text-align: center;
+    align-items: center;
   }
 
   .navbar-links.active {
@@ -211,11 +227,12 @@ header {
     margin: 0 auto;
     top: 85px;
     left: 10%;
+    padding-bottom: 2rem;
   }
 
   .sub-menu.open {
     display: block;
-    background-color: $footer-text;
+    background-color: lightgray;
     width: 70%;
     color: $darkblue-headingtext;
     border-radius: 5px;
@@ -229,10 +246,36 @@ header {
 
   .sub-menu.open li {
     margin-bottom: 0.7rem;
+    font-family: $overpass-semibold-font;
+  }
+
+  .log-in {
+    color: $darkgray-blue-bodytext;
+    margin-bottom: 2rem;
+    margin-left: 25px;
   }
 }
 
 @media (min-width: 769px) {
+  .divider {
+    display: none;
+  }
+  .navbar {
+    padding-top: 3rem;
+  }
+
+  .navbar__heading {
+    margin-left: 5rem;
+  }
+
+  .parent {
+    margin-left: 2rem;
+  }
+
+  .login__container {
+    margin-right: 7rem;
+  }
+
   .mobile-arrow {
     display: none;
   }
@@ -241,83 +284,104 @@ header {
     display: flex;
     align-items: center;
   }
+
+  .navbar li a {
+    padding: 0;
+  }
+
+  .sub-menu.open {
+    position: absolute;
+    top: 100px;
+    height: auto;
+    width: 15vw;
+    background-color: white;
+    color: black;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    margin: 6px auto;
+    padding-left: 0.3rem;
+    border-radius: 5px;
+  }
+
+  .sub-menu.open li {
+    margin-top: 1rem;
+    padding-left: 1rem;
+    padding-bottom: 1rem;
+    font-family: $ubuntu-med-font;
+  }
+  .log-in {
+    color: white;
+  }
 }
 
-// input[type="checkbox"] {
-//   display: none;
-//   visibility: hidden;
-// }
-
-// .hamburger {
-//   position: relative;
-//   top: -7px;
-//   cursor: pointer;
-//   justify-content: center;
-//   display: none;
-//   @include mobile {
-//     display: flex;
-//   }
-// }
-
-// .middle {
-//   height: 3px;
-//   width: 1.875rem;
-//   background-color: white;
-//   border-radius: 3.125rem;
-//   position: absolute;
-//   transition: 0.3s ease;
-// }
-
-// .top {
-//   bottom: 5px;
-//   height: 3px;
-//   width: 1.875rem;
-//   background-color: white;
-//   border-radius: 3.125rem;
-//   position: absolute;
-//   transition: 0.3s ease;
-// }
-
-// .bottom {
-//   top: 10px;
-//   height: 3px;
-//   width: 1.875rem;
-//   background-color: white;
-//   border-radius: 3.125rem;
-//   position: absolute;
-//   transition: 0.3s ease;
-// }
-
-// input[type="checkbox"]:checked ~ .hamburger .top {
-//   transform: rotate(-50deg);
-//   width: 1.56rem;
-//   transform-origin: right;
-//   top: -10px;
-// }
-
-// input[type="checkbox"]:checked ~ .hamburger .bottom {
-//   transform: rotate(50deg);
-//   width: 1.56rem;
-//   transform-origin: right;
-//   top: 10px;
-// }
-
-// input[type="checkbox"]:checked ~ .hamburger .middle {
-//   transform: translateX(-20px);
-//   opacity: 0;
-// }
-// Nav Links
-
-.divider {
-  @include mobile {
-    visibility: visible;
-    width: 60vw;
-    margin: 2rem auto;
-  }
+input[type="checkbox"] {
+  display: none;
   visibility: hidden;
 }
 
+.hamburger {
+  position: relative;
+  top: -7px;
+  cursor: pointer;
+  justify-content: center;
+  display: none;
+}
+
+.middle {
+  height: 3px;
+  width: 1.875rem;
+  background-color: white;
+  border-radius: 3.125rem;
+  position: absolute;
+  transition: 0.3s ease;
+}
+
+.top {
+  bottom: 5px;
+  height: 3px;
+  width: 1.875rem;
+  background-color: white;
+  border-radius: 3.125rem;
+  position: absolute;
+  transition: 0.3s ease;
+}
+
+.bottom {
+  top: 10px;
+  height: 3px;
+  width: 1.875rem;
+  background-color: white;
+  border-radius: 3.125rem;
+  position: absolute;
+  transition: 0.3s ease;
+}
+
+input[type="checkbox"]:checked ~ .hamburger .top {
+  transform: rotate(-50deg);
+  width: 1.56rem;
+  transform-origin: right;
+  top: -10px;
+}
+
+input[type="checkbox"]:checked ~ .hamburger .bottom {
+  transform: rotate(50deg);
+  width: 1.56rem;
+  transform-origin: right;
+  top: 10px;
+}
+
+input[type="checkbox"]:checked ~ .hamburger .middle {
+  transform: translateX(-20px);
+  opacity: 0;
+}
+
+// Nav Links
+
 .login__container {
+  display: flex;
+  align-items: center;
+  margin-left: 0.6rem;
   @include mobile {
     display: flex;
     flex-direction: column;
@@ -327,14 +391,7 @@ header {
 .log-in {
   text-decoration: none;
   font-family: $overpass-semibold-font;
-  @include mobile {
-    color: $darkblue-headingtext;
-    margin-bottom: 2rem;
-  }
-  @include desktop {
-    color: white;
-    padding-right: 2rem;
-  }
+  padding-right: 2rem;
 }
 
 .signup-btn {
@@ -346,6 +403,7 @@ header {
   color: white;
   margin: 0 auto;
   outline: none;
+  font-family: $overpass-semibold-font;
 }
 
 .signup-btn:hover {
@@ -572,6 +630,7 @@ footer {
   background-color: $darkblack-blue-footer-bckgrd;
   color: $white-text;
   border-top-right-radius: 5rem;
+  padding-bottom: 1.5rem;
   @include desktop {
     display: flex;
     align-items: baseline;
