--- a/styles/styles.css
+++ b/styles/styles.css
@@ -525,6 +525,10 @@ ul .sub-menu {
   font-family: "Overpass SemiBold";
 }
 
+.sub-menu li {
+  cursor: pointer;
+}
+
 .future__heading {
   margin-top: 3rem;
   text-align: center;
@@ -806,7 +810,7 @@ footer {
   background-color: #25252d;
   color: white;
   border-top-right-radius: 5rem;
-  padding-bottom: 1.5rem;
+  padding-bottom: 2rem;
 }
 
 @media (min-width: 1440px) {
